[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/HighlandGothicFLF.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shared_ui/waiting_for_players_panel/waiting_for_players.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/game/clock_ticking.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 2 )

[node name="waiting_for_players" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="waiting_for_player_attachment" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="grey_out" type="ColorRect" parent="waiting_for_player_attachment"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 0.392157 )

[node name="waiting_for_label" type="Label" parent="waiting_for_player_attachment"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -244.0
margin_right = 498.0
margin_bottom = -114.0
custom_fonts/font = SubResource( 1 )
text = "Waiting for players"
align = 1
valign = 1

[node name="shame_label" type="Label" parent="waiting_for_player_attachment"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -108.0
margin_right = 61.0
margin_bottom = -82.0
text = "shame them"

[node name="waiting_for_players_container" type="GridContainer" parent="waiting_for_player_attachment"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -68.0
margin_right = 424.0
margin_bottom = 284.0
columns = 2

[node name="waiting_counter" type="Timer" parent="."]

[node name="game_countdown_label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "-"
align = 1
valign = 1

[node name="ticking_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="waiting_counter" to="." method="_on_waiting_countdown_timeout"]
